[project]
name = "aokit"
version = "0.1.1"
description = "Ahead-of-time compilation toolkit"
readme = "README.md"
authors = [
    { name = "cbensimon", email = "charles@huggingface.co" },
    { name = "sayakpaul", email = "sayak@huggingface.co" },
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.34.0,<2.0",
    "torch>=2.8.0,<3.0",
]

[project.scripts]
aokit = "aokit:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.run]
source = ["aokit"]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "^\\s*if TYPE_CHECKING:\\s*$",
    "^\\s*assert_never\\(.*\\)\\s*$",
    "^\\s*debug\\(.*\\)\\s*$",
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.pyright]
include = ["src/aokit", "tests"]
pythonVersion = "3.10"
reportPossiblyUnboundVariable = "error"
reportUnnecessaryComparison = true
reportPrivateImportUsage = false

[tool.ruff]
include = ["src/aokit/*.py", "tests/*.py"]
line-length = 120

[tool.ruff.format]
exclude = ["tests/*.py"]
quote-style = "preserve"
